fixed z-index

--- a/src/styles/components/_Calendar.scss
+++ b/src/styles/components/_Calendar.scss
@@ -8,6 +8,7 @@
   top: 100%;
   right: -10%;
   user-select: none;
+  z-index: 999;
 
   abbr {
     text-decoration: none;
